fix: refactor and solved warnings