@@ -4,7 +4,6 @@ import com.gamelisto.usuarios_service.application.dto.UsuarioDTO;
 import com.gamelisto.usuarios_service.domain.repositories.RepositorioUsuarios;
 import com.gamelisto.usuarios_service.domain.usuario.EstadoUsuario;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -23,6 +22,6 @@ public class BuscarUsuariosConNotificacionesActivadasUseCase {
         .findByStatusAndNotificationsActive(EstadoUsuario.ACTIVO, true)
         .stream()
         .map(UsuarioDTO::from)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
